fixed some inline block bugs

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Maple Cafe Survey Form</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <link
@@ -91,7 +97,7 @@
               name="recommend"
               class="input-radio"
             />Not sure</label
-          ><br />
+          >
           <p>Which coffee from our menu do you drink most often?</p>
           <select
             name="mostpopularcoffee"
@@ -127,7 +133,7 @@
               name="experience"
               class="input-checkbox"
             />Overall atmposphere</label
-          ><br />
+          >
           <label for="speedyservice"
             ><input
               id="speedyservice"
@@ -136,7 +142,7 @@
               name="experience"
               class="input-checkbox"
             />Speedy service</label
-          ><br />
+          >
           <label for="overallclean"
             ><input
               id="overallclean"
@@ -145,7 +151,7 @@
               name="experience"
               class="input-checkbox"
             />Overall cleanliness</label
-          ><br />
+          >
           <label for="pastryselect"
             ><input
               id="pastryselect"
@@ -154,7 +160,7 @@
               name="experience"
               class="input-checkbox"
             />Pastry selection</label
-          ><br />
+          >
           <label for="comfortseat"
             ><input
               id="comfortseat"
@@ -163,7 +169,7 @@
               name="experience"
               class="input-checkbox"
             />Comfortable seating</label
-          ><br />
+          >
           <label for="enoughseat"
             ><input
               id="enoughseat"
@@ -172,7 +178,7 @@
               name="experience"
               class="input-checkbox"
             />Enough number of seating</label
-          ><br />
+          >
           <label for="locationcafe"
             ><input
               id="locationcafe"
@@ -181,7 +187,7 @@
               name="experience"
               class="input-checkbox"
             />Location of the cafe</label
-          ><br />
+          >
           <label for="friendly-staff"
             ><input
               id="friendly-staff"
@@ -190,7 +196,7 @@
               name="experience"
               class="input-checkbox"
             />Friendly accomodating staff</label
-          ><br />
+          >
           <label for="wifi-connect"
             ><input
               id="wifi-connect"
@@ -199,7 +205,7 @@
               name="experience"
               class="input-checkbox"
             />Wifi connectivity</label
-          ><br />
+          >
 
           <p>
             What part of the experience would you liked to see improved? Please
